--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <table cellspacing="20">
         <tr>
             <td>
-                <img src="C:\Users\User\OneDrive\Desktop\personalSite1\cropped_img.png" alt="" srcset="">
+                <img src="C:\Users\User\OneDrive\Desktop\personalSite1\img.png" alt="" srcset="">
             </td>
             <td>
                <h2 style="color: blue;">Ibiteye Faith </h2> 
